# handsfree_ros_imu

./: CMakeLists.txt  package.xml
cfg/: HandsfreeRosImu.cfg
scripts/: create_udev_rules  hfi_a9_ros.py  hfi_a9_ros_.py  hfi_b6_ros.py  hfi_b9_ros.py
tutorials/imu_user_manual/03_基础教程/02_Python驱动测试/: doc.md
udev/: 10-imu.rules
